[project]
name = "zmk"
description = "A command line program to help set up ZMK Firmware"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development",
  "Topic :: Utilities",
]
dependencies = [
  "backports.strenum; python_version < '3.11'",
  "dacite >= 1.9.2, < 2.0.0",
  "giturlparse >= 0.14.0, < 0.15.0",
  "mako >= 1.3.10, < 2.0.0",
  "rich >= 14.2.0, < 15.0.0",
  "ruamel.yaml >= 0.18.17, < 0.19.0",
  "shellingham >= 1.5.4, < 2.0.0",
  "typer >= 0.21.0, < 0.22.0",
  "west >= 1.5.0, < 2.0.0",
]
dynamic = ["version"]

[project.urls]
Chat = "https://zmk.dev/community/discord/invite"
Documentation = "https://zmk.dev/docs"
"Issue Tracker" = "https://github.com/zmkfirmware/zmk-cli/issues/"
"Source Code" = "https://github.com/zmkfirmware/zmk-cli/"

[project.scripts]
zmk = "zmk.main:app"

[project.optional-dependencies]
dev = ["pre-commit", "pylint", "pyright"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.pylint.MAIN]
ignore = "_version.py"

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "arguments-differ",  # Covered by pyright
  "fixme",
  "too-few-public-methods",
  "too-many-arguments",
  "too-many-branches",
  "too-many-instance-attributes",
  "too-many-locals",
  "too-many-positional-arguments",
  "too-many-statements",
]

[tool.setuptools]
packages = ["zmk"]

[tool.setuptools_scm]
version_file = "zmk/_version.py"
